--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "scripts": {
         "build": "rimraf ./lib && tsc",
         "prepare": "npm run build",
-        "test": "jest",
+        "test": "jest --passWithNoTests",
         "test:cov": "jest --coverage",
         "example": "npx ts-node example/index.ts",
         "lint": "npx @biomejs/biome lint .",
